<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_base_x4"
        android:textSize="@dimen/text_large"/>

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textAllCaps="true"
        android:layout_below="@id/tv_sign_in"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_username"
        android:hint="@string/hint_username"
        android:layout_alignTop="@id/tv_user_name"
        android:layout_toEndOf="@id/tv_user_name"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_base"
        android:text="@string/password"
        android:id="@+id/tv_password"
        android:hint="@string/hint_password"
        android:layout_below="@id/et_username"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_password"
        android:password="true"
        android:layout_alignTop="@id/tv_password"
        android:layout_toEndOf="@id/tv_password"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_base"
        android:text="@string/sign_in"
        android:id="@+id/btn_sign_in"
        android:layout_marginTop="@dimen/margin_base"
        android:layout_below="@id/et_password"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/btn_sign_up"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_base"
        android:layout_marginTop="@dimen/margin_base"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_via_facebook"
        android:id="@+id/btn_sign_in_via_facebook"
        android:layout_above="@id/btn_sign_up"/>

</RelativeLayout>
